2009-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/registry.c (RegistryInfo): There is no reason to expose
	the RegistryInfo structure in the public interface so it is moved
	to registry.c.

2009-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (CompareImageCommand): Report full error rather
	than rounded error in error reports since sometimes the value
	reported was rounded down to zero.

	* utilities/tests/hald-clut-transform.sh: New test to verify that
	Hald CLUT interpolation is working perfectly.

	* utilities/tests/hald-clut-identity.sh: Renamed from
	hald-clut.sh.

2009-06-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (RegisterJPEGImage): Fix typo which caused IJG
	library version to be shown for "JPG" format but not for "JPEG".
	Also use a more descriptive name for JPEG library.

	* magick/image.c (DescribeImage): Filter out spurious EXIF
	attributes which already exist because we previously accessed
	them.  We do a full EXIF dump later.

2009-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/FAQ.rst: Add a FAQ about how to process many files at once.

2009-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Reduce usage of deprecated Autoconf macros.

	* coders/jpeg.c (ReadJPEGImage): Set image orientation from EXIF
	Orientation tag if it is present.

	* www/formats.rst: Add TopoL format as per Jaroslav Fojtik.

2009-06-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: User provided LDFLAGS was being overwritten under
	Solaris.
	* Many files: Additional reduction of shadowing warnings.

2009-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Fix leak of the entire mask
	image supplied via -mask.

	* utilities/tests/mask.sh: Add a test for applying a mask image
	with -mask.

2009-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
